# cpp-irc

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.d  README.md  cppdappsConfig.cmake.in  cppdappsConfigVersion.cmake.in
cmake/: GenerateLibTests.cmake  GenerateSourceGroups.cmake  GenerateTests.cmake  PreventInSourceBuilds.cmake
dapps/containers/: binaryheap.hpp  binarytree.hpp  hashtable.hpp  sort.hpp
dapps/irc/: channel.hpp  client.hpp  client_base.hpp  connection.hpp  irc_exception.hpp  message.hpp  mode_state.hpp  nickname.hpp  prefix.hpp  regex_definitions.hpp  reply.hpp  secure_client.hpp  server.hpp  service.hpp  user_mode.hpp  username.hpp
dapps/irc/client/: irc_channel.hpp  irc_client.hpp  irc_context.hpp  irc_error.hpp  irc_exception.hpp  irc_message.hpp  irc_nickname.hpp  irc_operator.hpp  irc_reply.hpp  irc_server.hpp  irc_service.hpp  irc_ssl_context.hpp  irc_user.hpp
dapps/irc/messages/: admin_request.hpp  channel_mode_request.hpp  connect_request.hpp  error_request.hpp  info_request.hpp  ison_request.hpp  join_request.hpp  kill_request.hpp  list_request.hpp  lusers_request.hpp  message.hpp  motd_request.hpp  names_request.hpp  nick_request.hpp  notice_request.hpp  oper_request.hpp  operwall_request.hpp  part_request.hpp  pass_request.hpp  ping_request.hpp  pong_request.hpp  private_request.hpp  rehash_request.hpp  reply.hpp  request.hpp  restart_request.hpp  service_request.hpp  servlist_request.hpp  squery_request.hpp  squit_request.hpp  stats_request.hpp  summon_request.hpp  time_request.hpp  topic_request.hpp  user_mode_request.hpp  user_request.hpp  userhost_request.hpp  users_request.hpp  version_request.hpp  who_request.hpp  (+2 more)
dapps/irc/replies/: reply.hpp
dapps/irc/requests/: admin_request.hpp  away_request.hpp  die_request.hpp  invite_request.hpp  join_request.hpp  kick_request.hpp  links_request.hpp  quit_request.hpp  trace_request.hpp
dapps/irclib/client/: irc_nickname.hpp
irc/: channel.hpp  client.hpp  irc_exception.hpp  message.hpp  mode.hpp  mode_flags.xml  modes.hpp  nickname.hpp  password.hpp  request.hpp  server.hpp  username.hpp
libs/containers/src/: CMakeLists.txt  binaryheap.cpp  binarytree.cpp  hashtable.cpp  sort.cpp
libs/containers/test/: CMakeLists.txt  binarytree_test.cpp  hashtable_test.cpp  sort_test.cpp
libs/dapps/irc/src/: CMakeLists.txt
libs/dapps/irc/test/: client_test.cpp  connection_test.cpp  nickname_test.cpp  print_boost_ec.cpp  regex_test.cpp  reply_test.cpp
libs/dapps/irc/test/Debug/: cpp-irclib-nickname_test.ilk  cpp-irclib-print_boost_ec.ilk
libs/dapps/irc/test/cpp-irclib-client_test.dir/Debug/cpp-ircl.F61021CF.tlog/: cpp-irclib-client_test.lastbuildstate  custombuild.command.1.tlog
libs/dapps/irc/test/cpp-irclib-connection_test.dir/Debug/cpp-ircl.56E4205D.tlog/: custombuild.read.1.tlog
libs/dapps/irc/test/cpp-irclib-nickname_test.dir/Debug/cpp-ircl.F51C98B2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libs/dapps/irc/test/cpp-irclib-print_boost_ec.dir/Debug/cpp-ircl.8B4BA09C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libs/irc/client/src/: CMakeLists.txt  irc_channel.cpp  irc_client.cpp  irc_error.cpp  irc_exception.cpp  irc_message.cpp  irc_nickname.cpp  irc_operator.cpp  irc_reply.cpp  irc_server.cpp  irc_service.cpp  irc_user.cpp  nickname.cpp
libs/irc/client/test/: CMakeLists.txt  client_test.cpp  nickname_abnf_test.cpp  nickname_test.cpp  server_test.cpp
libs/irc/src/: CMakeLists.txt
libs/irc/test/: CMakeLists.txt  client_test.cpp  nickname_test.cpp
libs/irclib/client/example/: CMakeLists.txt
libs/irclib/client/src/: CMakeLists.txt  nickname.cpp
libs/irclib/client/test/: CMakeLists.txt  nickname_abnf_test.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
